# cost-tracker

./: .dockerignore  .env.example  .gitignore  .markdownlint.jsonc  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  debug_calculate.py  docker-compose.yml  home-automation-hub  implementation_plan.md  mise.toml  mkdocs.yml  pyproject.toml  steps.md
.claude/: settings.json
.github/workflows/: code.yml  docker.yml  docs.yml
alembic/: env.py
alembic/versions/: 001_add_users_table.py  001_initial_schema.py  002_add_trips_tables.py  002_add_user_lifecycle.py  002_add_user_lifecycle_and_role.py  003_add_expenses.py  004_add_settlements.py  005_add_expense_splits.py  006_add_expense_notes.py  007_add_recurring_definitions.py  008_add_recurring_expense_fields.py  6851f09a03b6_add_groups_and_memberships.py  a1b2c3d4e5f6_use_timestamptz_for_all_datetime_columns.py  b2c3d4e5f6a7_add_audit_logs_table.py  bfe1bcdb54d3_add_check_constraints_for_role_enums.py  ce449cce377c_add_server_defaults_to_timestamp_columns.py  dab90f9436fe_add_settled_to_expense_status.py  e46e0337f54d_add_missing_group_fields.py
app/: dependencies.py  logging.py  main.py  settings.py
app/auth/: __init__.py  dev.py  middleware.py  oidc.py  session.py
app/domain/: balance.py  errors.py  models.py  ports.py  recurring.py  value_objects.py
app/templates/: _button.html  _card.html  _empty_state.html  _form_input.html  _nav_desktop.html  _nav_mobile.html  base.html
app/web/: admin.py  api_internal.py  auth.py  dashboard.py  expenses.py  filters.py  form_parsing.py  recurring.py  router.py  settlements.py  setup.py  templates.py  trips_admin.py  trips_guest.py  view_models.py
docs/: audit-removal-guide.md  code-review-findings.md  deactivation-removal-guide.md  documentation-strategy.md  glance-integration.md  index.md  refactor_balance_calculation.md  testing-followups-household-setup.md  testing-strategy.md
docs/architecture/: architecture-validation-results.md  core-architectural-decisions.md  implementation-patterns-consistency-rules.md  index.md  project-context-analysis.md  project-structure-boundaries.md  settlement-patterns.md  starter-template-evaluation.md
docs/backlog/: admin-user-management-ux.md
docs/design/: deferred-review-findings.md  epics-overview.md  index.md  product-requirements.md
docs/development/: conventions.md  glance-integration.md  index.md  setup.md  testing.md  ui-consistency-plan.md
docs/operations/: authentication.md  configuration.md  database.md  deployment.md  index.md  installation.md  troubleshooting.md  upgrading.md
docs/trip-ux/: ux-tasks.md
docs/user-guide/: faq.md  features.md  getting-started.md  glance-integration.md  index.md
docs/ux-design/: admin-interface.md  core-user-experience.md  defining-core-experience.md  design-direction-decision.md  design-system-foundation.md  desired-emotional-response.md  executive-summary.md  index.md  user-journey-flows.md  ux-pattern-analysis-inspiration.md  visual-design-foundation.md
scripts/: import_cost_split.py
tasks/: lessons.md
tests/: architecture_test.py  conftest.py  proof_except_syntax.py  settings_test.py
tests/adapters/: audit_adapter_test.py  contract_test.py  expense_search_query_test.py  recurring_adapter_test.py  settlement_adapter_test.py  test_dashboard_queries.py  unit_of_work_test.py
tests/api/: expenses_test.py
tests/auth/: csrf_test.py  session_test.py
tests/domain/: balance_test.py  recurring_test.py  recurring_use_cases_test.py  settlements_test.py  splits_test.py  test_expenses.py  users_test.py  (+1 more)
(+142 files in other folders)
