[project]
name = "cost-tracker"
version = "0.1.0"
description = "Self-hosted household expense-sharing app"
requires-python = ">=3.14"
dependencies = [
    "fastapi~=0.115.12",
    "uvicorn[standard]~=0.34.3",
    "sqlmodel~=0.0.24",
    "alembic~=1.15.2",
    "pydantic-settings~=2.9.1",
    "structlog~=25.3.0",
    "authlib~=1.4.1",
    "httpx~=0.28.1",
    "itsdangerous~=2.2.0",
    "python-multipart~=0.0.20",
    "jinja2~=3.1.6",
    "psycopg2-binary~=2.9.11",
    "python-dotenv~=1.0.1",
]

[dependency-groups]
dev = [
    "pytest~=8.3.5",
    "ruff~=0.11.6",
    "pytest-httpx~=0.35.0",
    "ty>=0.0.23",
    "pytailwindcss~=0.2.0",
]

[tool.pytest.ini_options]
python_files = ["*_test.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
