[project]
name = "cost-tracker"
version = "0.1.0"
description = "Self-hosted household expense-sharing app"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.3",
    "sqlmodel>=0.0.37",
    "alembic>=1.15.2",
    "pydantic-settings>=2.9.1",
    "structlog>=25.3.0",
    "authlib>=1.4.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.0.1",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "pytest-httpx>=0.35.0",
    "ty>=0.0.23",
    "pytailwindcss>=0.2.0",
]

[tool.pytest.ini_options]
python_files = ["*_test.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["alembic/"]

[[tool.ty.overrides]]
# SQLModel's Session.exec() is monkey-patched at runtime onto SQLAlchemy's Session.
# ty cannot see it because the type stubs don't include it.
# SQLAlchemy column descriptors (.desc(), .in_(), .notin_()) are InstrumentedAttribute
# at runtime but ty sees the Python type annotation instead.
include = ["app/adapters/sqlalchemy/**"]
rules = { unresolved-attribute = "warn" }

[[tool.ty.overrides]]
# Test setup code passes row.id (int | None) everywhere after session.flush().
# These are all the same SQLModel id lifecycle gap — DB-generated IDs are always
# populated after flush, but the static type remains int | None.
# Session.exec and column descriptors also apply here.
include = ["tests/**"]
rules = { invalid-argument-type = "warn", unresolved-attribute = "warn" }

[[tool.ty.overrides]]
# Field(sa_type=...) accepts instances at runtime but stubs declare type[Any].
# This is a known SQLModel stub gap — all Field() calls in orm_models.py are correct.
include = ["app/adapters/sqlalchemy/orm_models.py"]
rules = { invalid-argument-type = "warn" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
